<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/bg_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/bg_logout"
            android:title="@string/menu_gallery" />
    </group>

    <item
        android:id="@+id/nav_footer"
        android:title="@string/copyright"
        android:checkable="false"
        android:enabled="false"
        android:orderInCategory="100"
        android:titleTextAppearance="?android:attr/textAppearanceSmall"
        android:visible="true" />
<!--    <item-->
<!--        android:id="@+id/nav_footer2"-->
<!--        android:title="@string/developper"-->
<!--        android:checkable="false"-->
<!--        android:enabled="false"-->
<!--        android:orderInCategory="100"-->
<!--        android:titleTextAppearance="?android:attr/textAppearanceSmall"-->
<!--        android:visible="true" />-->

</menu>