<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mg.itu.m1p10android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mg.itu.m1p10android.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mg.itu.m1p10android.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_articles"
        android:name="mg.itu.m1p10android.ui.articles.ArticleFragment"
        android:label="Articles"
        tools:layout="@layout/fragment_article_list" >
        <action
            android:id="@+id/nav_article_list_to_details"
            app:destination="@id/nav_articles_details" />
    </fragment>
    <fragment
        android:id="@+id/nav_articles_details"
        android:name="mg.itu.m1p10android.ui.articles.ArticleDetailsFragment"
        android:label="Details"
        tools:layout="@layout/fragment_article_details" >
        <argument
            android:name="idArticle"
            app:argType="integer" />
    </fragment>
</navigation>